--- a/M9_Working_with_web_data/Books.html
+++ b/M9_Working_with_web_data/Books.html
@@ -10,19 +10,19 @@
 <body>
   <tr>
     <td>Python Cookbook: Recipes for Mastering Python</td>
-    <td>[Brian K. Jones, David M. Beazley]</td>
+    <td>Brian K. Jones, David M. Beazley</td>
     <td>2011</td>
     <td>4.2</td>
   </tr>
  <tr>
     <td>Python for Data Analysis: Data Wrangling with Pandas, NumPy</td>
-    <td>[Wes McKinney]</td>
+    <td>Wes McKinney</td>
     <td>2011</td>
     <td>4.2</td>
   </tr>
   <tr>
     <td>Natural Language Processing with Python</td>
-    <td>[Edward Loper,Steven Bird, Ewan Klein]</td>
+    <td>Edward Loper,Steven Bird, Ewan Klein</td>
     <td>2011</td>
     <td>4.8</td>
   </tr>
